<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="30sp"
        android:layout_marginTop="200sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_view_time"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/time_at_zero"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_date" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="176dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/stopwatchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopwatch"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/timerTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerbtn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stopwatchbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"

            android:layout_marginStart="16dp"
            android:contentDescription="@string/stopwatchDescription"
            app:layout_constraintBottom_toTopOf="@+id/stopwatchTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/stopwatch"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/timerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:text="@string/timer"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/alarmTitle"
            app:layout_constraintStart_toEndOf="@+id/stopwatchTitle"
            app:layout_constraintTop_toTopOf="@+id/alarmTitle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/timerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/timerDescription"
            app:layout_constraintBottom_toTopOf="@+id/timerTitle"
            app:layout_constraintEnd_toEndOf="@+id/timerTitle"
            app:srcCompat="@drawable/ic_timer"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/alarmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="33dp"
            android:text="@string/alarm"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/globalTitle"
            app:layout_constraintStart_toStartOf="@+id/timerTitle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/alarmbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:contentDescription="@string/alarmDescription"
            app:layout_constraintBottom_toTopOf="@+id/alarmTitle"
            app:layout_constraintStart_toStartOf="@+id/alarmTitle"
            app:srcCompat="@drawable/alarm"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/globalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:text="@string/global"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/alarmTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmbtn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/globalbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:contentDescription="@string/gClockDescription"
            app:layout_constraintBottom_toTopOf="@+id/globalTitle"
            app:layout_constraintStart_toStartOf="@+id/globalTitle"
            app:srcCompat="@drawable/globe"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>